# flutter-crypto-demo

./: .metadata  LICENSE  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
build-vscode/Debug/: CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
build-vscode/Debug/.cmake/api/v1/reply/: cache-v2-5577def326081c3cb348.json  cache-v2-c7951ead629e7d2435f0.json  cache-v2-f3aed191feb7a4b1ea62.json  cmakeFiles-v1-a91d62a8bff24e802f2c.json  cmakeFiles-v1-c49aff6bbde6e6d4f119.json  codemodel-v2-621109e11fd2d51bd79a.json  codemodel-v2-946775929ed16d8725da.json  codemodel-v2-a053f550f4344f95f35d.json  index-2025-10-06T08-29-08-0499.json  index-2025-10-06T11-43-05-0586.json  index-2025-10-06T13-15-10-0169.json  target-crypto_openssl-Debug-d8cb7daa6d91702cc503.json  (+3 more)
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: crypto_openssl.podspec  native_add.podspec
ios/Classes/: crypto_openssl.c
lib/: crypto_openssl.dart  crypto_openssl_bindings_generated.dart  native_add.dart  native_add_bindings_generated.dart
linux/: CMakeLists.txt
macos/: crypto_openssl.podspec
src/: CMakeLists.txt  crypto_openssl.c  native_add.c  native_add.h
src/openssl/openssl-1.1.1t/: Makefile  configdata.pm  libcrypto.pc  libssl.pc  openssl.pc
src/openssl/openssl-1.1.1t/apps/: openssl
src/openssl/openssl-1.1.1t/crypto/: buildinf.h
src/openssl/openssl-1.1.1t/crypto/bn/: rsa_sup_mul.d
src/openssl/openssl-1.1.1t/fuzz/: asn1-test  asn1parse-test  bignum-test  bndiv-test  client-test  cms-test  conf-test  crl-test  ct-test  server-test  x509-test
src/openssl/openssl-1.1.1t/test/: aborttest  afalgtest  asn1_decode_test  asn1_encode_test  asn1_internal_test  asn1_string_table_test  asn1_time_test  asynciotest  asynctest  bad_dtls_test  bftest  bio_callback_test  bio_enc_test  bio_memleak_test  bioprinttest  bntest  buildtest_c_aes  buildtest_c_asn1  buildtest_c_asn1t  buildtest_c_async  buildtest_c_bio  buildtest_c_blowfish  buildtest_c_bn  buildtest_c_buffer  buildtest_c_camellia  buildtest_c_cast  buildtest_c_cmac  buildtest_c_cms  buildtest_c_comp  buildtest_c_conf  buildtest_c_conf_api  buildtest_c_crypto  buildtest_c_ct  buildtest_c_des  buildtest_c_dh  buildtest_c_dsa  buildtest_c_dtls1  buildtest_c_e_os2  buildtest_c_ebcdic  buildtest_c_ec  (+142 more)
windows/: CMakeLists.txt
(+2 files in other folders)
